Publish Edited Submission
* Add Publish button to draft submit page
* Delete old submission and set draft to not draft
* Generate new PDF and clear visibility flags on old one
* Rename service/module to better match front end

--- a/portal-frontend/src/app/features/alcs-edit-submission/alcs-edit-submission.component.html
+++ b/portal-frontend/src/app/features/alcs-edit-submission/alcs-edit-submission.component.html
@@ -137,6 +137,7 @@
         [originalSubmissionUuid]='originalSubmissionUuid'
         [draftMode]="true"
         (exit)="onExit()"
+        (submit)='onSubmit()'
       ></app-review-and-submit>
     </div>
   </cdk-step>
