--- a/portal-frontend/src/app/features/create-application-dialog/create-application-dialog.component.html
+++ b/portal-frontend/src/app/features/create-application-dialog/create-application-dialog.component.html
@@ -1,75 +1,81 @@
-<div mat-dialog-title>
-  <h4>Create New</h4>
-</div>
-
-<div mat-dialog-content class="steps">
-  <div [ngClass]="{ 'step-submission-type': true, 'display-none': currentStepIndex !== 0 }">
-    <mat-radio-group (change)="onSubmissionTypeSelected($event)" color="primary">
-      <mat-radio-button *ngFor="let subType of submissionTypes" [value]="subType.code" class="radio-option" required>
-        {{ subType.label }}
-      </mat-radio-button>
-    </mat-radio-group>
-  </div>
-  <div [ngClass]="{ 'step-application-type': true, 'display-none': currentStepIndex !== 1 }">
-    <mat-radio-group
-      class="app-type-radio-group"
-      aria-labelledby="radio-label"
-      (change)="onAppTypeSelected($event)"
-      color="primary"
-      required
-    >
-      <mat-radio-button *ngFor="let appType of applicationTypes" class="radio-option" [value]="appType.code">
-        {{ appType.portalLabel }}
-      </mat-radio-button>
-    </mat-radio-group>
+<div class="dialog-container">
+  <div mat-dialog-title>
+    <h4>Create New</h4>
   </div>
 
-  <div id="warningBanner" class="warning-banner">
-    <div>
-      <span
-        *ngIf="
-          (!selectedSubmissionType && currentStepIndex === submissionStep) ||
-          (!selectedAppType && currentStepIndex === applicationStep)
-        "
-        >Select an option to learn more about the
-        {{ currentStepIndex === 0 ? 'submission type' : 'application type' }}.</span
+  <div mat-dialog-content class="steps" [ngClass]="{ 'app-type-dialog': currentStepIndex === applicationStep }">
+    <div class="step-description">
+      Select an option to learn more about the {{ currentStepIndex === 0 ? 'submission type' : 'application type' }}.
+    </div>
+    <div [ngClass]="{ 'step-submission-type': true, 'display-none': currentStepIndex !== 0 }">
+      <mat-radio-group (change)="onSubmissionTypeSelected($event)" color="primary">
+        <mat-radio-button *ngFor="let subType of submissionTypes" [value]="subType.code" class="radio-option" required>
+          {{ subType.label }}
+        </mat-radio-button>
+      </mat-radio-group>
+    </div>
+    <div [ngClass]="{ 'step-application-type': true, 'display-none': currentStepIndex !== 1 }">
+      <mat-radio-group
+        class="app-type-radio-group"
+        aria-labelledby="radio-label"
+        (change)="onAppTypeSelected($event)"
+        color="primary"
+        required
       >
-      <b class="sub-type-label" [ngClass]="{ 'display-none': currentStepIndex !== submissionStep }">{{
-        selectedSubmissionType?.label
-      }}</b>
+        <mat-radio-button *ngFor="let appType of applicationTypes" class="radio-option" [value]="appType.code">
+          {{ appType.portalLabel }}
+        </mat-radio-button>
+      </mat-radio-group>
+    </div>
 
-      <div
-        id="subTypeDescription"
-        *ngIf="currentStepIndex === submissionStep"
-        [ngClass]="{ 'ellipsis-3': !readMoreClicked }"
-        [innerHtml]="selectedSubmissionType?.portalHtmlDescription"
-      ></div>
-    </div>
-    <div>
-      <b
-        class="app-type-label"
-        [ngClass]="{ 'display-none': currentStepIndex !== applicationStep, 'radio-option': true }"
-        >{{ selectedAppType?.portalLabel }}</b
-      >
-    </div>
     <div
-      id="appTypeDescription"
-      *ngIf="currentStepIndex === applicationStep"
-      [ngClass]="{ 'ellipsis-3': !readMoreClicked }"
-      [innerHtml]="selectedAppType?.htmlDescription"
-    ></div>
-    <span
-      class="read-more-btn"
-      [ngClass]="{ 'display-none': !isReadMoreVisible }"
+      id="warningBanner"
+      class="warning-banner"
       *ngIf="
         (selectedSubmissionType && currentStepIndex === submissionStep) ||
         (selectedAppType && currentStepIndex === applicationStep)
       "
-      (click)="onReadMoreClicked()"
-      ><u>Read {{ readMoreClicked ? 'Less' : 'More' }}</u></span
     >
-  </div>
+      <div>
+        <b class="sub-type-label" [ngClass]="{ 'display-none': currentStepIndex !== submissionStep }">{{
+          selectedSubmissionType?.label
+        }}</b>
 
+        <div
+          id="subTypeDescription"
+          *ngIf="currentStepIndex === submissionStep"
+          [ngClass]="{ 'ellipsis-3': !readMoreClicked }"
+          [innerHtml]="selectedSubmissionType?.portalHtmlDescription"
+        ></div>
+      </div>
+      <div>
+        <b
+          class="app-type-label"
+          [ngClass]="{ 'display-none': currentStepIndex !== applicationStep, 'radio-option': true }"
+          >{{ selectedAppType?.portalLabel }}</b
+        >
+      </div>
+      <div
+        id="appTypeDescription"
+        *ngIf="currentStepIndex === applicationStep"
+        [ngClass]="{ 'ellipsis-3': !readMoreClicked }"
+        [innerHtml]="selectedAppType?.htmlDescription"
+      ></div>
+      <span
+        class="read-more-btn"
+        [ngClass]="{ 'display-none': !isReadMoreVisible }"
+        *ngIf="
+          (selectedSubmissionType && currentStepIndex === submissionStep) ||
+          (selectedAppType && currentStepIndex === applicationStep)
+        "
+        (click)="onReadMoreClicked()"
+        ><u>Read {{ readMoreClicked ? 'Less' : 'More' }}</u></span
+      >
+    </div>
+  </div>
+</div>
+
+<div mat-dialog-action class="dialog-action-container">
   <div class="dialog-controls-wrapper" *ngIf="currentStepIndex === submissionStep">
     <button mat-stroked-button color="primary" (click)="onCancel()">Cancel</button>
     <button mat-flat-button [disabled]="!selectedSubmissionType" color="primary" (click)="onStepChange(1)">Next</button>
