Clear Review when loading next Submission
* Only show Download PDF if there is a review

--- a/portal-frontend/src/app/features/view-submission/view-submission.component.html
+++ b/portal-frontend/src/app/features/view-submission/view-submission.component.html
@@ -115,7 +115,12 @@
             >
               Edit Application
             </button>
-            <button (click)="onDownloadReviewPdf(application.fileNumber)" mat-flat-button color="accent">
+            <button
+              *ngIf="applicationReview"
+              (click)="onDownloadReviewPdf(application.fileNumber)"
+              mat-flat-button
+              color="accent"
+            >
               Download PDF
             </button>
             <button
