--- a/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.scss
+++ b/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.scss
@@ -84,3 +84,13 @@
     margin-left: rem(16);
   }
 }
+
+mat-button-toggle-group#isFarm {
+  height: rem(55);
+
+  .mat-button-toggle {
+    display: flex;
+    align-items: center;
+    height: 100%;
+  }
+}
