--- a/portal-frontend/src/app/features/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/edit-submission/primary-contact/primary-contact.component.html
@@ -60,7 +60,7 @@
           </div>
         </div>
         <div class="full-row">
-          <label for="orgName">Organization Name (Optional)</label>
+          <label for="orgName">Organization Name (optional)</label>
           <mat-form-field appearance="outline">
             <input id="orgName" matInput placeholder="Enter Organization Name" formControlName="organizationName" />
           </mat-form-field>
