--- a/portal-frontend/src/app/features/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/application-details/application-details.component.html
@@ -4,7 +4,7 @@
     [$applicationSubmission]="$application"
     [showErrors]="showErrors"
     [showEdit]="showEdit"
-    [originalSubmissionUuid]='originalSubmissionUuid'
+    [originalSubmissionUuid]="originalSubmissionUuid"
   ></app-parcel>
 </section>
 <section>
@@ -14,7 +14,7 @@
     [showEdit]="showEdit"
     [parcelType]="parcelType.OTHER"
     [draftMode]="draftMode"
-    [originalSubmissionUuid]='originalSubmissionUuid'
+    [originalSubmissionUuid]="originalSubmissionUuid"
   ></app-parcel>
 </section>
 <section>
@@ -42,7 +42,7 @@
           {{ primaryContact.lastName }}
           <app-no-data [showRequired]="showErrors" *ngIf="!primaryContact.lastName"></app-no-data>
         </div>
-        <div class="subheading2 grid-1">Organization (Optional)</div>
+        <div class="subheading2 grid-1">Organization (optional)</div>
         <div class="grid-double">
           {{ primaryContact.organizationName }}
           <app-no-data [showRequired]="showErrors" *ngIf="!primaryContact.organizationName"></app-no-data>
