Differentiate step description from questions and fix other parcel id

--- a/portal-frontend/src/app/features/edit-submission/select-government/select-government.component.html
+++ b/portal-frontend/src/app/features/edit-submission/select-government/select-government.component.html
@@ -4,7 +4,7 @@
     Please indicate the local government in which the parcel(s) under application is located. If the property is located
     within the Islands Trust, please select 'Islands Trust' and not a specific island.
   </p>
-  <p>All fields are required unless stated optional.</p>
+  <p>*All fields are required unless stated optional.</p>
 </div>
 <form [formGroup]="form">
   <div class="form-row">
