--- a/portal-frontend/src/app/features/edit-submission/land-use/land-use.component.html
+++ b/portal-frontend/src/app/features/edit-submission/land-use/land-use.component.html
@@ -2,7 +2,7 @@
   <div class="step-description">
     <h2>Land Use</h2>
     <p>Describe the current land use of parcel(s) under application and adjacent parcels.</p>
-    <p>All fields are required unless stated optional.</p>
+    <p>*All fields are required unless stated optional.</p>
   </div>
   <app-warning-banner>
     Please consult the
