--- a/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-details.component.html
+++ b/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-details.component.html
@@ -2,7 +2,7 @@
   <div class="step-description">
     <h3>Identify Parcels Under Application</h3>
     <p>Provide parcel identification and registered ownership information for each parcel under application.</p>
-    <p>All fields are required unless stated optional.</p>
+    <p>*All fields are required unless stated optional.</p>
   </div>
   <mat-expansion-panel
     *ngFor="let parcel of parcels; let parcelInd = index"
@@ -19,8 +19,8 @@
       [parcel]="parcel"
       [$owners]="$owners"
       [fileId]="fileId"
-      [submissionUuid]='submissionUuid'
-      [showErrors]='showErrors'
+      [submissionUuid]="submissionUuid"
+      [showErrors]="showErrors"
       (onFormGroupChange)="onParcelFormChange($event)"
       (onOwnersUpdated)="onOwnersUpdated()"
     ></app-parcel-entry>
