--- a/portal-frontend/src/app/features/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/edit-submission/primary-contact/primary-contact.component.html
@@ -1,7 +1,7 @@
 <div class="step-description">
   <h2>Primary Contact</h2>
   <p>Select from the listed parcel owners or identify a third party agent</p>
-  <p>All fields are required unless stated optional.</p>
+  <p>*All fields are required unless stated optional.</p>
 </div>
 <section>
   <div class="contacts">
