--- a/portal-frontend/src/app/features/edit-submission/proposal/nfu-proposal/nfu-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/nfu-proposal/nfu-proposal.component.html
@@ -4,7 +4,7 @@
     Considerations are subject to
     <a> Section 6 of the ALC Act. </a>
   </p>
-  <p>All fields are required unless stated optional.</p>
+  <p>*All fields are required unless stated optional.</p>
 </div>
 <app-warning-banner>
   Please consult the '
