Change nfuWillImportFill to correct type
Now a full boolean since its no longer JSON
Also fix step numbers for edit buttons

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/nfu-details/nfu-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/nfu-details/nfu-details.component.html
@@ -24,10 +24,10 @@
   </div>
   <div class="grid-double">
     <span *ngIf="application.nfuWillImportFill !== null">{{
-      application.nfuWillImportFill === 'true' ? 'Yes' : 'No'
+      application.nfuWillImportFill === true ? 'Yes' : 'No'
     }}</span>
   </div>
-  <ng-container *ngIf="application.nfuWillImportFill === 'true'">
+  <ng-container *ngIf="application.nfuWillImportFill === true">
     <div class="full-width">
       <hr />
     </div>
