Bug fixes for L/FNG Submission PDF
* Add PDF download buttons to submit page for FNG and LG review
* Supply generated time so it shows properly in PDF

--- a/portal-frontend/src/app/features/review-submission/review-submission.component.html
+++ b/portal-frontend/src/app/features/review-submission/review-submission.component.html
@@ -1,7 +1,10 @@
 <ng-template #header>
   <div class="header">
     <h6 *ngIf="application">Application ID: {{ application.fileNumber }} | {{ application.type }}</h6>
-    <button (click)="onReturnApplication()" mat-flat-button color="accent">Return Application</button>
+    <div>
+      <button (click)="onReturnApplication()" mat-flat-button color="accent">Return Application</button>
+      <button *ngIf="showDownloadPdf" (click)="onDownloadPdf()" mat-flat-button color="primary">Download PDF</button>
+    </div>
   </div>
 </ng-template>
 
