--- a/portal-frontend/src/app/features/review-submission/review-submit/review-submit.component.html
+++ b/portal-frontend/src/app/features/review-submission/review-submit/review-submit.component.html
@@ -491,6 +491,9 @@
       </div>
     </mat-expansion-panel>
   </div>
+  <div>
+    <button (click)="onDownloadPdf()" mat-flat-button color="primary">Download PDF</button>
+  </div>
   <div class="button-container">
     <button (click)="onExit()" mat-stroked-button color="accent">Save and Exit</button>
     <div>
