--- a/alcs-frontend/src/app/features/application/application.component.html
+++ b/alcs-frontend/src/app/features/application/application.component.html
@@ -9,7 +9,7 @@
       <div class="nav">
         <div *ngFor="let route of childRoutes" class="nav-link">
           <div
-            *ngIf='route.requiresAuthorization ? isAuthorized : true'
+            *ngIf="route.requiresAuthorization ? isAuthorized : true"
             [routerLink]="route.path ? route.path : './'"
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
@@ -19,9 +19,9 @@
             {{ route.menuTitle }}
           </div>
           <div
-            *ngIf='route.requiresAuthorization ? !isAuthorized : false'
+            *ngIf="route.requiresAuthorization ? !isAuthorized : false"
             class="nav-item disabled"
-            matTooltip='Application not subject to ALC Review'
+            matTooltip="Application not subject to ALC Review"
           >
             <mat-icon>{{ route.icon }}</mat-icon>
             {{ route.menuTitle }}
